# Adversarial-Attacks-test-task-

./: .gitignore  README.md  pyproject.toml  requirements.txt
runs/stage0_convnext_scratch/: eval_clean.csv  metrics.jsonl  training_history.csv
runs/stage0_convnext_scratch_v2/: eval_clean.csv  metrics.jsonl  training_history.csv
runs/stage0_convnext_scratch_v3_160/: metrics.jsonl  training_history.csv
runs/stage0_convnext_scratch_v3_224/: eval_clean.csv  metrics.jsonl  source_eval_clean.csv  training_history.csv
scripts/: stage0_convnext_scratch.sh  stage0_convnext_scratch_v2.sh  stage0_convnext_scratch_v3_160.sh  stage0_convnext_scratch_v3_224.sh
src/imagenette_stage0/: data.py  evaluate.py  metrics.py  models.py  plot_training.py  train.py  utils.py
tests/: test_data.py  test_models.py  test_plot_training.py  test_training.py
