[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagenette-stage0"
version = "0.1.0"
description = "ConvNeXt Tiny trained from scratch on eight Imagenette classes with progressive resizing."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
